2005-11-18  Derek Price  <derek@ximbiot.com>

	* update.c (checkout_file): Add FIXME.

2005-11-17  Derek Price  <derek@ximbiot.com>

	* client.c (update_entries), update.c (update): Restore refetch
	notices and add two new ones.
	* sanity.sh: Update to compensate.

2005-11-15  Derek Price  <derek@ximbiot.com>

	* client.c (update_entries): Only print "U ..." when patches are
	applied successfully.  Only print patch failed messages for traces.
	* update.c (update): Share flags with refetch pass.  Never send
	contents when refetching.  Only print refetching message for traces.
	Use "U" instead of "P", except for traces.
	* sanity.sh: Update to compensate.

2005-11-14  Mark D. Baushke  <mdb@gnu.org>

	* admin.c (opt_values): New enum for long option values.
	(short_options): Now in file scope for validation of
	UserAdminOptions.
	(long_options): Use opt_value enums for option.value entries.
	(make_UserAdminOptions): Rewrite.
	(admin): Use opt_value enumes for long_option cases.
	Quote the name of the restricted admin group.
	* mkmodules.c (UserAdminOptions): Add defaults for execute and
	no-execute.

2005-11-13  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (modes-execute-*): Use $CVSROOT_DIRNAME rather than
	default text for expected data.

	* admin.c (admin_usage): Fix spelling in help string.
	Alphabetize long options.
	(Patch from Alexandros Manoussakis.)

2005-11-12  Mark D. Baushke  <mdb@gnu.org>

	* admin.c: Add long option processing.
	(make_UserAdminOptions): New option for administrative permission
	of long options.
	(admin): Use long option processing. Add support for --execute and
	--no-execute options.	
	* parseinfo.c (parse_config): Use new make_UserAdminOptions
	function to process the UserAdminOptions= configuration line.
	* sanity.sh (modes): Added tests for admin --execute/--no-execute
	options.
	(Based on CVS patch #4446 from Alex Manoussakis.)

2005-11-10  Larry Jones  <lawrence.jones@ugs.com>
