@@ -1,3 +1,8 @@
+2005-11-22  Derek Price  <derek@ximbiot.com>
+
+	* checkout.c (checkout_proc): Bury sacrificial chicken.
+	* sanity.sh: Update to compensate.
+
 2005-11-18  Derek Price  <derek@ximbiot.com>
 
 	* update.c (checkout_file): Add FIXME.
